tetrate/TIS0208/e2e/bad-resource.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-peer-auth-1
  namespace: test
spec:
  mtls:
    mode: STRICT
