tetrate/TIS0208/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allow-permissive-peerauth
spec:
  validationFailureAction: Enforce
